Cada elemento conoce su proyecto, se edita en su ficha y llega al cluster
- La ficha del drawer es un EditableView de mateu (ElementFichaView): detalle
  con Edit/Save en el sitio, genérico sobre los CrudAdapters del editor.
- El modelo gana los campos de mateu: @UI (path, indexHtmlPath,
  frontendComponentPath) en la UI; favicon, title y style (StyleConstants)
  en la página; y el elemento URL, asignable desde servicios (urlIds).
- Ámbito por proyecto: projectId en los 54 tipos raíz, estampado central en
  save(), adopción de huérfanos al abrir el repositorio, y filtrado en los
  CRUDs (findAll) y en la proyección del editor. El selector de cabecera manda.
- Generación: README siempre (proyecto vacío = carpeta + README), servicio
  por defecto cuando no hay despliegue declarado, páginas realizadas por la
  UI o por el menú/slots de la App, la página que realiza la UI lleva el @UI,
  home de la App como entrada seleccionada + HomeRouteSupplier, acentos
  normalizados en identificadores, y terraform real para Hetzner con DNS de
  Cloudflare desde las URLs.
- Despliegue: acción de cabecera 🚀 que regenera, empaqueta en local,
  construye la imagen runtime, la sube y aplica los manifiestos con kubectl
  (namespace del contexto por defecto, pull secret desde el docker login,
  perfil local sin database declarada), narrando el progreso por SSE.
- De propina: las reconstrucciones posicionales de Page/Service/UiAdapter/
  Project pasan a toBuilder (borraban campos al guardar), los getLabel ya no
  tumban la ficha con ids desconocidos, y los roles generados se deduplican
  por proyecto.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>